--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.6.0",
+    "stripe": "^20.1.2",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
